# leveraged-monopoly

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/: README.md  sweep.py
analysis/tests/: test_sweep.py
docs/: architecture.md  frontend.md  i18n.md
docs/decisions/: 0001-python-only-no-rust.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  components.tsx  main.tsx  mock.ts  types.ts  useGame.ts
frontend/src/components/: ActionSheet.tsx
frontend/src/i18n/: index.tsx
frontend/src/net/: client.ts
frontend/src/screens/: Game.tsx  Home.tsx  Lobby.tsx
frontend/src/styles/: game.css  global.css
src/monopoly/: __init__.py  cli.py  history_cli.py
src/monopoly/accounts/: __init__.py  models.py  progression.py  service.py  store.py
src/monopoly/bots/: __init__.py  cashflow.py  conservative.py  contrarian.py  degen.py  policy.py  registry.py  shark.py
src/monopoly/config/: __init__.py  presets.py
src/monopoly/engine/: __init__.py  actions.py  board.py  errors.py  market.py  player.py  reducer.py  rng.py  state.py  valuation.py
src/monopoly/engine/mechanics/: __init__.py  building.py  inflation.py  leverage.py  margin.py  movement.py  securitization.py  shock.py  trade.py  trading.py
src/monopoly/persistence/: __init__.py  db.py  store.py
src/monopoly/realtime/: __init__.py  hints.py  hub.py  protocol.py  room.py  server.py
src/monopoly/simulation/: __init__.py  backtest.py  runner.py
tests/: test_accounts.py  test_board_development.py  test_bots.py  test_engine.py  test_persistence.py  test_realtime.py  test_rng.py  test_simulation.py  test_trading.py
