[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leveraged-monopoly"
version = "0.1.0"
description = "Deterministic economic engine for Leveraged Monopoly -- a multiplayer board game with leverage, margin calls, systemic shocks, securitization, and inflation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Leveraged Monopoly contributors" }]
keywords = ["game", "simulation", "economics", "deterministic-engine", "monopoly"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Board Games",
]
# The engine is pure standard-library Python by design (portable, dependency-free
# kernel). Optional tooling lives in the extras below.
dependencies = []

[project.optional-dependencies]
# The realtime WebSocket server needs a transport library; the engine itself
# stays dependency-free.
realtime = ["websockets>=12.0"]
dev = ["pytest>=7.0", "websockets>=12.0"]

[project.scripts]
# Play a headless demo game from the terminal: `monopoly-demo`.
monopoly-demo = "monopoly.cli:main"
# Run the realtime WebSocket server: `monopoly-server`.
monopoly-server = "monopoly.realtime.server:main"
# Inspect persisted game history (recent games, leaderboard, replay): `monopoly-history`.
monopoly-history = "monopoly.history_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
